--- a/front-end/public/css/style.css
+++ b/front-end/public/css/style.css
@@ -34,8 +34,9 @@ h1 {
   background-color: white;
   font-family: monospace;
   overflow: scroll;
+  overflow-x: scroll;
   width: auto;
-  height: 99%;
+  height: 45%;
   padding: 5px;
   border: 1px solid gray;
 }
