1. Input is converted to upper case 2. Added web service 3. Added requirements.txt 4. Added file download capability

--- a/front-end/public/views/index.html
+++ b/front-end/public/views/index.html
@@ -14,12 +14,10 @@
                 ng-model="model.dna"
                 rows="5"
                 class="form-control"
-                placeholder="Enter DNA sequence here">DNA sequence</textarea>
+                placeholder="Enter DNA sequence here" capitalize>DNA sequence</textarea>
 
         <a ng-click="model.searchDNA()"
            class="btn btn-block btn-info">Search</a>
-
-
 
 
     </div>
