--- a/front-end/public/views/index.html
+++ b/front-end/public/views/index.html
@@ -23,11 +23,11 @@
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 
-      Current Execution Summary:<button class="btn btn-sm" id="clearCurrent" ng-click="model.clearConsole()">Clear</button>
-      <div class="output-console" ng-bind-html="model.message" id="output-console-current"></div>
+      Current Executions:<button style="margin-left: 10px" class="btn btn-sm" id="clearCurrent" ng-click="model.clearConsole()">Clear</button>
+      <div class="output-console"  id="output-console-current"></div>
 
 
-        Previous Executions:<button class="btn btn-sm" id="clearPrev" ng-click="model.clearHistory()">Clear</button>
+        Previous Executions:<button style="margin-left: 10px" class="btn btn-sm" id="clearPrev" ng-click="model.clearHistory()">Clear</button>
         <div class="output-console" ng-bind-html="model.prev" id="output-console-prev"></div>
     </div>
   </div>
