Input accepts only alphabets

--- a/front-end/public/views/index.html
+++ b/front-end/public/views/index.html
@@ -14,6 +14,7 @@
                 ng-model="dna"
                 rows="5"
                 class="form-control"
+                pattern="[A-Z]+" ng-pattern-restrict
                 placeholder="Enter DNA sequence here"
                 capitalize>DNA sequence</textarea>
 
